# artspeak

./: CMakeLists.txt  LICENSE  README.md  canvas_web.js  canvas_web.wasm  favorites.md  index.html  style.css
canvas/: canvas.cpp
core/include/: Runner.hpp  Scanner.hpp  Token.hpp
core/src/: Runner.cpp  Scanner.cpp  Token.cpp  artspeak.cpp
docs/: canvas.js  canvas.wasm  canvas_web.wasm  index.html  style.css
lang/: chunk.cpp  chunk.hpp  common.hpp  compiler.cpp  compiler.hpp  debug.cpp  debug.hpp  lang-test.cpp  lang.cpp  lang.hpp  scanner.cpp  scanner.hpp  tokentype.cpp  tokentype.hpp  vm.cpp  vm.hpp
temp/: dummy.cpp
utils/: tokens.txt  tokentype_gen.py
web/: canvas_web.cpp
web_canvas/: shell.html
